<resources>
    <string name="app_name">GymLab</string>

    <!-- NavigationView -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GymLab</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- NavigationView items -->
    <string name="exercises">Упражнения</string>
    <string name="training_programs">Программы</string>
    <string name="training_sessions">Тренировки</string>
    <string name="measures">Замеры</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>

    <!-- Options menu -->
    <string name="finish_session">Завершить тренировку</string>
    <string name="delete_session">Удалить тренировку</string>

    <!-- ExerciseDescriptionFragment -->
    <string name="exercise">Упражнение</string>

    <string name="exercise_name">Название упражнения</string>
    <string name="images">Изображения</string>
    <string name="main_muscle">Целевые мышцы</string>
    <string name="targeted_muscles">Второстепенные мышцы</string>
    <string name="mechanics_type">Тип</string>
    <string name="exercise_type">Вид</string>
    <string name="equipment">Оборудование</string>
    <string name="description">Описание</string>
    <string name="technique">Техника выполнения</string>

    <!-- MeasurementTabFragment -->
    <string name="calculator">Калькулятор</string>
    <string name="add_measurement">Добавить</string>
    <string name="measurement_history">История</string>

    <!-- MeasurementDialog -->
    <string name="enter_value">Введите значение параметра</string>

    <!-- ProportionsCalculatorFragment -->
    <string name="reset">Сбросить</string>
    <string name="fill">Заполнить</string>
    <string name="count">Рассчитать</string>
    <string name="parameter">Параметр</string>
    <string name="actual_value">Фактическое значение</string>
    <string name="expected_value">Ожидаемое значение</string>
    <string name="percent">Процент</string>
    <string name="delete_exercise">Удалить упражнение</string>

</resources>
