<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercises.ExerciseDescriptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_margin"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"/>

            <ImageView
                android:id="@+id/image_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"/>

        </LinearLayout>

        <TextView
            android:text="@string/main_muscle"
            style="@style/LabelStyle"/>

        <TextView
            android:id="@+id/main_muscle"
            tools:text="@string/main_muscle"
            style="@style/FieldStyle"/>

        <View style="@style/DividerStyle" />

        <TextView
            android:text="@string/targeted_muscles"
            style="@style/LabelStyle"/>

        <TextView
            android:id="@+id/targeted_muscles"
            tools:text="@string/targeted_muscles"
            style="@style/FieldStyle"/>

        <View style="@style/DividerStyle" />

        <TextView
            android:text="@string/mechanics_type"
            style="@style/LabelStyle" />

        <TextView
            android:id="@+id/mechanics_type"
            tools:text="@string/mechanics_type"
            style="@style/FieldStyle" />

        <View style="@style/DividerStyle" />

        <TextView
            android:text="@string/exercise_type"
            style="@style/LabelStyle" />

        <TextView
            android:id="@+id/exercise_type"
            tools:text="@string/exercise_type"
            style="@style/FieldStyle" />

        <View style="@style/DividerStyle" />

        <TextView
            android:text="@string/equipment"
            style="@style/LabelStyle" />

        <TextView
            android:id="@+id/equipment"
            tools:text="@string/equipment"
            style="@style/FieldStyle" />

        <View style="@style/DividerStyle" />

        <TextView
            android:text="@string/description"
            style="@style/LabelStyle" />

        <TextView
            android:id="@+id/description"
            tools:text="@string/description"
            style="@style/FieldStyle" />

    </LinearLayout>

</ScrollView>