<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_dumbbell"
            android:title="@string/exercises" />
        <item
            android:id="@+id/nav_training_programs"
            android:icon="@drawable/ic_training_programs"
            android:title="@string/training_programs" />
        <item
            android:id="@+id/nav_measures"
            android:icon="@drawable/ic_measuring_tape"
            android:title="@string/measures" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_camera"
            android:title="Что-то ещё" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
